--- a/composer.json
+++ b/composer.json
@@ -42,7 +42,11 @@
             "@php artisan vendor:publish --tag=laravel-assets --ansi --force"
         ],
         "post-root-package-install": [
-            "@php -r \"file_exists('.env') || copy('.env.example', '.env');\""
+            "@php -r \"file_exists('.env') || copy('.env.example', '.env');\"",
+            "@php -r \"fclose(fopen('database/database.sqlite', 'w'))\"",
+            "@php artisan optimize",
+            "@php artisan migrate",
+            "@php artisan db:seed"
         ],
         "post-create-project-cmd": [
             "@php artisan key:generate --ansi"
