move composer script to postautoloaddump

--- a/composer.json
+++ b/composer.json
@@ -36,7 +36,12 @@
     "scripts": {
         "post-autoload-dump": [
             "Illuminate\\Foundation\\ComposerScripts::postAutoloadDump",
-            "@php artisan package:discover --ansi"
+            "@php artisan package:discover --ansi",
+            "@php -r \"file_exists('.env') || copy('.env.example', '.env');\"",
+            "@php -r \"fclose(fopen('database/database.sqlite', 'w'))\"",
+            "@php artisan optimize",
+            "@php artisan migrate",
+            "@php artisan db:seed"
         ],
         "post-update-cmd": [
             "@php artisan vendor:publish --tag=laravel-assets --ansi --force"
